--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,13 +1,20 @@
+---
+import Navbar from "../components/Navbar.astro";
+import "../styles/global.css";
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>CP Academy</title>
 	</head>
 	<body>
+		<Navbar />
 		<slot />
 	</body>
 </html>
