--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
+import Article from '../components/home/Article.astro';
 import Hero from '../components/home/Hero.astro';
+import Timeline from '../components/home/Timeline.astro';
 import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -8,4 +10,5 @@ import Layout from '../layouts/Layout.astro';
 
 <Layout>
 	<Hero />
+	<Timeline />
 </Layout>
