--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,15 +1,17 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400..900;1,400..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
+@import "tailwindcss";
+@import "tailwindcss-animated";
 @plugin "daisyui" {
   themes: [ "light"];
   dark-theme: "light";
 }
 
 body {
-  background-color: #131313;
+  background-color: #1e1e1e;
   background-image: radial-gradient(
       circle at center,
-      rgba(255, 255, 255, 0.9) 0%,
+      rgba(255, 255, 255, 0) 0%,
       transparent 80%
     ),
     url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.7' numOctaves='3' stitchTiles='stitch'/%3E%3CfeColorMatrix type='matrix' values='1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0.25 0'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
@@ -17,17 +19,6 @@ body {
   background-repeat: repeat;
   background-attachment: fixed;
   background-blend-mode: overlay;
-}
-
-@media (min-width: 768px) {
-  body {
-    background-image: radial-gradient(
-        circle at center,
-        rgba(255, 255, 255, 0.9) 0%,
-        transparent 80%
-      ),
-      url("data:image/svg+xml,%3Csvg viewBox='0 0 200 200' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='1.2' numOctaves='3' stitchTiles='stitch'/%3E%3CfeColorMatrix type='matrix' values='1 0 0 0 0 0 1 0 0 0 0 0 1 0 0 0 0 0 0.2 0'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
-  }
 }
 
 .gradient-text {
