✨ Ajout de la dépendance "swiper", mise à jour des styles globaux avec de nouvelles variables CSS, ajustement de la classe z-index dans le composant Navbar, et ajout des composants Carousel et Why sur la page d'accueil.

--- a/src/components/home/Timeline.astro
+++ b/src/components/home/Timeline.astro
@@ -80,8 +80,9 @@ h2 {
   left: 5px;
   transform: translateX(-50%);
   width: 2px;
-  height: 0; /* Commencez à 0 */
+  height: 0;
   transition: height 1.5s ease;
+  min-height: calc(100% + 12rem);
 }
 
 .timeline-line.animate {
