--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,9 @@
 ---
 import Article from '../components/home/Article.astro';
+import Carousel from '../components/home/Carousel.astro';
 import Hero from '../components/home/Hero.astro';
 import Timeline from '../components/home/Timeline.astro';
+import Why from '../components/home/Why.astro';
 import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -11,4 +13,6 @@ import Layout from '../layouts/Layout.astro';
 <Layout>
 	<Hero />
 	<Timeline />
+	<Carousel />
+	<Why />
 </Layout>
