--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Article from '../components/home/Article.astro';
 import Carousel from '../components/home/Carousel.astro';
+import Contact from '../components/home/Contact.astro';
 import Hero from '../components/home/Hero.astro';
 import Timeline from '../components/home/Timeline.astro';
 import Why from '../components/home/Why.astro';
@@ -15,4 +16,5 @@ import Layout from '../layouts/Layout.astro';
 	<Timeline />
 	<Carousel />
 	<Why />
+	<Contact />
 </Layout>
