--- a/src/components/home/Timeline.astro
+++ b/src/components/home/Timeline.astro
@@ -1,27 +1,29 @@
-<div class="timeline-container py-16 px-4 md:px-8">
-  <h2 class="text-center text-2xl font-semibold mb-12 text-white">
+<div class="timeline-container py-16 px-4 md:px-16">
+  <h2 class="text-center text-2xl md:text-3xl font-semibold mb-12 text-white">
     10 ans d'expertise
     <br /> 
     dans <span class="gradient-text">l'entreprenariat</span>
   </h2>
   
-  <div class="timeline relative max-w-4xl mx-auto flex flex-col">
+  <div class="timeline relative max-w-4xl mx-auto md:mx-60 flex flex-col">
     <!-- Ligne verticale avec dégradé -->
     <div class="timeline-line absolute left-5 md:left-8 top-0 bottom-0 w-1 bg-gradient-to-b from-[#4158D0] via-[#C751C0] to-[#FFCB70]"></div>
     
     <!-- Premier point -->
     <div class="timeline-item flex mb-16 opacity-0">
       <div class="timeline-dot bg-[#4158D0] rounded-full w-5 h-5 flex-shrink-0 z-10"></div>
-      <div class="timeline-content ml-6 p-6 bg-none rounded-bl-xl rounded-tr-xl border-2 border-[#4158D0] flex-1">
-        <div class="mb-4 flex justify-center">
-          <img src="/src/assets/camille.png" alt="Camille Pernot" class="w-40 h-40  object-cover rounded-lg">
+      <div class="timeline-content ml-6 p-6 bg-none rounded-bl-xl flex-col flex rounded-tr-xl border-2 border-[#4158D0] md:flex-row md:items-center">
+        <div class="mb-4 flex justify-center md:w-1/3 md:mb-0">
+          <img src="/src/assets/camille.png" alt="Photo de Camille Pernot" class="w-40 h-40 md:w-full object-cover rounded-tr-xl rounded-bl-xl">
         </div>
-        <p class="text-white text-sm mb-4">
-          Derrière CP Academy, il y a une femme, une vision, une ambition, c'est Camille Pernot.
-        </p>
+        <div class="flex flex-col md:w-2/3 md:pl-10">
+          <p class="text-white text-sm mb-4">
+            Derrière CP Academy, il y a une femme, une vision, une ambition, c'est Camille Pernot.
+          </p>
         <p class="text-white text-sm">
           Avec 10 ans d'expérience dans l'entrepreneuriat, elle a su bâtir, structurer et propulser 15 entreprises, générant plusieurs millions d'euros de chiffre d'affaires. Mais au-delà des chiffres, c'est l'impact qui la motive : <span class="font-bold">transmettre, élever, transformer.</span>
         </p>
+        </div>
       </div>
     </div>
     
@@ -63,6 +65,12 @@ h2 {
   position: relative;
   left: 1.1rem;
   transform: translateX(-50%);
+}
+
+@media (min-width: 768px) {
+  .timeline-dot {
+    left: 0.3rem;
+  }
 }
 
 .timeline-content {
