--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "../components/Footer.astro";
 import Navbar from "../components/Navbar.astro";
 import "../styles/global.css";
 ---
@@ -16,6 +17,7 @@ import "../styles/global.css";
 	<body>
 		<Navbar />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
